[package]
name = "sovena-lock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Needed because we build JSON for SNIP-20 transfer msg
serde_json = "1.0"
